# MILFCrawler

./: README.md  pyproject.toml
models/: creepypasta.py  items.py  reddit.py
redditCrawler/: creepypasta-top-ranked.html  quotes-top-ranked.html  scrapedCreepypasta.json  scrapy.cfg
redditCrawler/redditCrawler/: settings.py
redditCrawler/redditCrawler/spiders/: bookspider.py  creepypastaCrawler.py  quotes_spider.py
