[tool.poetry]
name = "historiasreddit"
version = "0.1.0"
description = ""
authors = ["Lucas Visurraga <rusty_troller@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pendulum = "^3.0.0"
lxml = "^5.2.2"
parsel = "^1.9.1"
w3lib = "^2.2.1"
twisted = "^24.3.0"
cryptography = "^42.0.8"
pyopenssl = "^24.1.0"
scrapy = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
